--- a/setup/index.html
+++ b/setup/index.html
@@ -10,23 +10,110 @@
     <!-- font awesome -->
     <script src="./js/all.js"></script>
     <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Lato:ital,wght@1,100&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Lato:ital,wght@1,100&display=swap" rel="stylesheet"> -->
     <!-- main css -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
         
-    <a href="#">
-        <i class="fas fa-home fa-3x"></i>
-    </a>
-
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-4 bg-primary">hello world</div>
-            <div class="col-4"></div>
-            <div class="col-4 bg-light">hello world</div>
+            <div class="col-4 text-success"><b>Phadmushi Details</b></div>          
         </div>
     </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col p-2 h5" ><b>1.General Details</b></div>         
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-2"><b>Name of Phadmuhi</b>
+                <input type="text" class="form-control "  placeholder="Enter Name">
+            </div>
+            <div class="col-2"><b>Father's Name</b>
+                <input type="text" class="form-control"  placeholder="Enter Name">
+            </div>
+            <div class="col-2"><b>Aadhar Number</b>
+                <input type="text" class="form-control"  placeholder="Enter Aadhar">
+            </div>
+            <div class="col-2"><b>Mobile Number</b>
+                <input type="text" class="form-control"  placeholder="Enter Number">
+            </div>
+            <div class="col-8 p-3"><b>Address of Phadmuhi</b>
+                <input type="text" class="form-control"  placeholder="Enter Address">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col p-2 h5" ><b>2.Tendupatta Sangrahak Family(related to Phadmuhi)</b></div>         
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-3"><b>Tendupatta Sangrahak Card No.</b>
+                <input type="text" class="form-control"  placeholder="Enter Card Number">
+            </div>
+            <div class="col-3"><b>Name of Head Sangrahak Family</b>
+                <input type="text" class="form-control"  placeholder="Enter Name">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+                <div class="col p-2  h5" ><b>3.Qualification of Phadmuhi</b></div>         
+        </div>
+    </div> 
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-3"><b>Educational Qualification</b>
+                <input type="text" class="form-control"  placeholder="Enter Qualification">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+                <div class="col p-2   h5" ><b>4.Bank Details of Phadmuhi</b></div>         
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-2"><b>Account Holder's Name</b>
+                <input type="text" class="form-control bg-"  placeholder="Enter A/c Holder Name">
+            </div>
+            <div class="col-2"><b>Bank Account Number</b>
+                <input type="text" class="form-control"  placeholder="Enter Account Number">
+            </div>
+            <div class="col-2"><b>Bank Name</b>
+                <input type="text" class="form-control"  placeholder="Enter Bank Number">
+            </div>
+            <div class="col-2"><b>Branch</b>
+                <input type="text" class="form-control"  placeholder="Enter Branch">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-2 p-3 "><b>IFSC Code</b>
+                <input type="text" class="form-control"  placeholder="Enter IFSC Code">
+            </div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center">
+            <button type="button" class="btn btn-outline-success  mx-2 ">Exit</button>
+            <button type="button" class="btn btn-success ">Save</button>
+        </div>
+    </div>       
+
     <!-- Jquery -->
     <script src="./js/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap js -->
