--- a/js-tutorial/index.html
+++ b/js-tutorial/index.html
@@ -31,6 +31,16 @@
         document.getElementById("demo").innerHTML = "Hello javascript";}
 
         document.getElementById("demo1").innerHTML = (1+5)*10+1;
+
+
+
+        function validationForm['myform'] ['myfame'].value
+if (x == '') {
+        alert('name rayale ra vedhava'),
+        return false;
+}
+
+
     </script>
     <script src="./w3schools-js.js"></script>
 </body>
